[package]
name = "rocketmine"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raknet-rs = { path = "raklib-rs" }
regex = "1.3"
log4rs = "0.13"
rand = "0.7"
parking_lot = "0.11"
env_logger = "0.8.2"
uuid = { version = "0.8", features = ["v4"] }