[package]
name = "rocketmine"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raknet-rs = { path = "raklib-rs" }
regex = "1.3"
log = "0.4"
rand = "0.7"
parking_lot = "0.11"
simple_logger = "1.11"
uuid = { version = "0.8", features = ["v4"] }